package com.example.keystone_try.step.accelerometer;

public interface StepCountListener {
    void countStep();
}