package com.example.keystone_try.step.accelerometer;

public interface StepValuePassListener {
    void stepChanged(int steps);
}