@startuml

title __ACCELEROMETER's Class Diagram__\n

  namespace com.example.keystone_try {
    namespace step {
      namespace accelerometer {
        class com.example.keystone_try.step.accelerometer.StepCount {
            - count : int
            - mCount : int
            - timeOfLastPeak : long
            - timeOfThisPeak : long
            + StepCount()
            + countStep()
            + getStepDetector()
            + initListener()
            + notifyListener()
            + setSteps()
        }
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace step {
      namespace accelerometer {
        interface com.example.keystone_try.step.accelerometer.StepCountListener {
            {abstract} + countStep()
        }
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace step {
      namespace accelerometer {
        class com.example.keystone_try.step.accelerometer.StepDetector {
            ~ InitialValue : float
            ~ ThreadValue : float
            ~ TimeInterval : int
            ~ ValueNum : int
            ~ continueUpCount : int
            ~ continueUpFormerCount : int
            ~ gravityNew : float
            ~ gravityOld : float
            ~ isDirectionUp : boolean
            ~ lastStatus : boolean
            ~ oriValues : float[]
            ~ peakOfWave : float
            ~ tempCount : int
            ~ tempValue : float[]
            ~ timeOfLastPeak : long
            ~ timeOfNow : long
            ~ timeOfThisPeak : long
            ~ valleyOfWave : float
            + averageValue()
            + detectorNewStep()
            + detectorPeak()
            + initListener()
            + onAccuracyChanged()
            + onSensorChanged()
            + peakValleyThread()
        }
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace step {
      namespace accelerometer {
        interface com.example.keystone_try.step.accelerometer.StepValuePassListener {
            {abstract} + stepChanged()
        }
      }
    }
  }
  

  com.example.keystone_try.step.accelerometer.StepCount .up.|> com.example.keystone_try.step.accelerometer.StepCountListener
  com.example.keystone_try.step.accelerometer.StepCount o-- com.example.keystone_try.step.accelerometer.StepValuePassListener : mStepValuePassListener
  com.example.keystone_try.step.accelerometer.StepCount o-- com.example.keystone_try.step.accelerometer.StepDetector : stepDetector
  com.example.keystone_try.step.accelerometer.StepDetector .up.|> android.hardware.SensorEventListener
  com.example.keystone_try.step.accelerometer.StepDetector o-- com.example.keystone_try.step.accelerometer.StepCountListener : mStepListeners


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
